--- a/src/app/work/projects/alteracaoArquitetonica.mdx
+++ b/src/app/work/projects/alteracaoArquitetonica.mdx
@@ -1,3 +1,4 @@
+---
 title: "Alteração Arquitetônica — Redefinição de Layout para Ampliação de Sala de Reunião"
 publishedAt: "2025-10-28"
 summary: "Projeto de alteração arquitetônica para reconfiguração de um pavimento comercial, com demolições, redistribuição de divisórias em drywall e vidro, adequações elétricas e inserção de mobiliário, organizadas em uma única planta conforme solicitação do cliente."
@@ -8,6 +9,7 @@ team:
     role: "Engenharia Civil"
     avatar: "/images/avatar.jpg"
     linkedin: "https://www.linkedin.com/in/julia-grellmann"
+link: null
 ---
 
 ## Overview
@@ -19,19 +21,19 @@ Todas as salas do pavimento foram revistas, com ajustes de *layout, instalaçõe
 
 ## Intervenções Principais
 
-- *Demolição* das paredes do antigo lavabo e redistribuição do espaço interno.  
-- *Criação de novas divisórias em drywall*, ajustando os limites das salas de gerência e das áreas de reunião.  
-- *Alteração de divisórias de vidro e janelas*, adaptando esquadrias e garantindo conforto visual e ventilação.  
-- *Inclusão de mobiliário e novos pontos elétricos* na sala de reunião recém-criada.  
-- *Ajuste de iluminação e interruptores* conforme o novo layout funcional.  
+- **Demolição** das paredes do antigo lavabo e redistribuição do espaço interno.  
+- **Criação de novas divisórias em drywall**, ajustando os limites das salas de gerência e das áreas de reunião.  
+- **Alteração de divisórias de vidro e janelas**, adaptando esquadrias e garantindo conforto visual e ventilação.  
+- **Inclusão de mobiliário e novos pontos elétricos** na sala de reunião recém-criada.  
+- **Ajuste de iluminação e interruptores** conforme o novo layout funcional.  
 
 ## Materiais e Soluções
 
-- Divisórias em *drywall* e *vidro com estrutura metálica na cor prata*.  
-- Portas de *compensado naval* com guarnições em PVC.  
-- Sistema elétrico revisado, com *novos pontos de tomada, TV e ar-condicionado*.  
-- Mobiliário projetado para *otimização de espaço* e *conforto visual*.  
+- Divisórias em **drywall** e **vidro com estrutura metálica na cor prata**.  
+- Portas de **compensado naval** com guarnições em PVC.  
+- Sistema elétrico revisado, com **novos pontos de tomada, TV e ar-condicionado**.  
+- Mobiliário projetado para **otimização de espaço** e **conforto visual**.  
 
 ## Resultado
 
-O novo layout proporcionou *maior aproveitamento da área útil*, modernizou o espaço e criou *ambientes de reunião mais amplos e funcionais*, mantendo a identidade corporativa e a coerência entre materiais, iluminação e proporções.
+O novo layout proporcionou **maior aproveitamento da área útil**, modernizou o espaço e criou **ambientes de reunião mais amplos e funcionais**, mantendo a identidade corporativa e a coerência entre materiais, iluminação e proporções.
