--- a/src/app/work/projects/portariaCorporativa.mdx
+++ b/src/app/work/projects/portariaCorporativa.mdx
@@ -14,18 +14,18 @@ link: null
 
 ## Overview
 
-Este projeto teve como objetivo a *alteração e reorganização dos ambientes da portaria, em função de um **quadro de telefonia que não poderia ser removido ou realocado*.  
+Este projeto teve como objetivo a alteração e reorganização dos ambientes da portaria, em função de um quadro de telefonia que não poderia ser removido ou realocado.  
 
-A proposta consistiu em *adaptar o projeto original* a essa restrição técnica, realizando um *remanejamento estratégico das salas* para garantir o funcionamento pleno do espaço, sem comprometer as áreas operacionais e de atendimento. 
+A proposta consistiu em adaptar o projeto original a essa restrição técnica, realizando um remanejamento estratégico das salas para garantir o funcionamento pleno do espaço, sem comprometer as áreas operacionais e de atendimento. 
 
 ## Intervenções Principais
 
-- *Alteração de layout*, redistribuindo os ambientes para adequar-se ao quadro de telefonia fixo.  
-- *Adequação dos acessos e circulação interna*, otimizando o fluxo entre as salas.  
-- *Ajustes nas paredes de drywall* e nos limites físicos das áreas de trabalho.  
-- Revisão de *elementos técnicos e funcionais*, garantindo compatibilidade entre infraestrutura e conforto espacial. 
+- Alteração de layout, redistribuindo os ambientes para adequar-se ao quadro de telefonia fixo.  
+- Adequação dos acessos e circulação interna, otimizando o fluxo entre as salas.  
+- Ajustes nas paredes de drywall e nos limites físicos das áreas de trabalho.  
+- Revisão de elementos técnicos e funcionais, garantindo compatibilidade entre infraestrutura e conforto espacial. 
 
 ## Resultado
 
-O novo layout proporcionou *melhor aproveitamento do espaço disponível, mantendo o quadro técnico no local original e garantindo **eficiência e organização* na portaria.  
-O projeto conciliou restrições físicas e necessidades funcionais, resultando em uma *solução prática, coerente e tecnicamente bem resolvida*.
+O novo layout proporcionou melhor aproveitamento do espaço disponível, mantendo o quadro técnico no local original e garantindo eficiência e organização na portaria.  
+O projeto conciliou restrições físicas e necessidades funcionais, resultando em uma solução prática, coerente e tecnicamente bem resolvida.
