--- a/src/app/work/projects/otimizacaoApartamento.mdx
+++ b/src/app/work/projects/otimizacaoApartamento.mdx
@@ -4,6 +4,7 @@ publishedAt: "2025-12-29"
 summary: "Projeto de layout interno para apartamento residencial de aproximadamente 40 m², desenvolvido sem intervenções estruturais, conforme restrições do condomínio. A proposta focou na reorganização do mobiliário e na otimização dos ambientes para atender às necessidades de um casal que prioriza funcionalidade, conforto e praticidade no dia a dia."
 images:
   - "/images/projects/project-01/otimizacaoApartamento.png"
+  - "/images/projects/project-01/otimizacaoApartamento2.png"
 team:
   - name: Julia Grellmann"
     role: "Engenharia Civil"
